tests/suite/snapshots/suite__case_3r3p.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Anchor
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: AnchorName
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 9
    line: 0
    column: 9
- token: Break
  start:
    index: 9
    line: 0
    column: 9
  end:
    index: 11
    line: 1
    column: 0
- token: Indent
  start:
    index: 11
    line: 1
    column: 0
  end:
    index: 11
    line: 1
    column: 0
- token: SequenceEntry
  start:
    index: 11
    line: 1
    column: 0
  end:
    index: 12
    line: 1
    column: 1
- token: Separator
  start:
    index: 12
    line: 1
    column: 1
  end:
    index: 13
    line: 1
    column: 2
- token: Scalar
  start:
    index: 13
    line: 1
    column: 2
  end:
    index: 14
    line: 1
    column: 3
- token: Break
  start:
    index: 14
    line: 1
    column: 3
  end:
    index: 16
    line: 2
    column: 0

