tests/suite/snapshots/suite__case_3rln_03.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: DoubleQuote
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: DoubleQuoted
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 10
- token: ScalarSpace
  start:
    line: 0
    column: 10
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Separator
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 4
- token: Escape
  start:
    line: 1
    column: 4
  end:
    line: 1
    column: 5
- token: EscapeCode
  start:
    line: 1
    column: 5
  end:
    line: 1
    column: 6
- token: DoubleQuoted
  start:
    line: 1
    column: 6
  end:
    line: 1
    column: 11
- token: DoubleQuote
  start:
    line: 1
    column: 11
  end:
    line: 1
    column: 12
- token: Break
  start:
    line: 1
    column: 12
  end:
    line: 2
    column: 0

