tests/suite/snapshots/suite__case_3rln_05.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: DoubleQuote
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: DoubleQuoted
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 10
    line: 0
    column: 10
- token: ScalarSpace
  start:
    index: 10
    line: 0
    column: 10
  end:
    index: 12
    line: 1
    column: 0
- token: Indent
  start:
    index: 12
    line: 1
    column: 0
  end:
    index: 12
    line: 1
    column: 0
- token: Separator
  start:
    index: 12
    line: 1
    column: 0
  end:
    index: 19
    line: 1
    column: 7
- token: DoubleQuoted
  start:
    index: 19
    line: 1
    column: 7
  end:
    index: 22
    line: 1
    column: 10
- token: DoubleQuote
  start:
    index: 22
    line: 1
    column: 10
  end:
    index: 23
    line: 1
    column: 11
- token: Break
  start:
    index: 23
    line: 1
    column: 11
  end:
    index: 25
    line: 2
    column: 0

