tests/suite/snapshots/suite__case_4abk.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: MappingStart
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Break
  start:
    line: 0
    column: 1
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Scalar
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 8
- token: Separator
  start:
    line: 1
    column: 8
  end:
    line: 1
    column: 9
- token: MappingValue
  start:
    line: 1
    column: 9
  end:
    line: 1
    column: 10
- token: Separator
  start:
    line: 1
    column: 10
  end:
    line: 1
    column: 11
- token: DoubleQuote
  start:
    line: 1
    column: 11
  end:
    line: 1
    column: 12
- token: DoubleQuoted
  start:
    line: 1
    column: 12
  end:
    line: 1
    column: 20
- token: DoubleQuote
  start:
    line: 1
    column: 20
  end:
    line: 1
    column: 21
- token: CollectionEntry
  start:
    line: 1
    column: 21
  end:
    line: 1
    column: 22
- token: Break
  start:
    line: 1
    column: 22
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Scalar
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 14
- token: Empty
  start:
    line: 2
    column: 14
  end:
    line: 2
    column: 14
- token: CollectionEntry
  start:
    line: 2
    column: 14
  end:
    line: 2
    column: 15
- token: Break
  start:
    line: 2
    column: 15
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: Scalar
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 13
- token: MappingValue
  start:
    line: 3
    column: 13
  end:
    line: 3
    column: 14
- token: Empty
  start:
    line: 3
    column: 14
  end:
    line: 3
    column: 14
- token: CollectionEntry
  start:
    line: 3
    column: 14
  end:
    line: 3
    column: 15
- token: Break
  start:
    line: 3
    column: 15
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: MappingEnd
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 1
- token: Break
  start:
    line: 4
    column: 1
  end:
    line: 5
    column: 0

