tests/suite/snapshots/suite__case_4cqq.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Scalar
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 5
- token: MappingValue
  start:
    line: 0
    column: 5
  end:
    line: 0
    column: 6
- token: Break
  start:
    line: 0
    column: 6
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Separator
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: Scalar
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 22
- token: ScalarSpace
  start:
    line: 1
    column: 22
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Separator
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: Scalar
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 19
- token: Break
  start:
    line: 2
    column: 19
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: Scalar
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 6
- token: MappingValue
  start:
    line: 4
    column: 6
  end:
    line: 4
    column: 7
- token: Separator
  start:
    line: 4
    column: 7
  end:
    line: 4
    column: 8
- token: DoubleQuote
  start:
    line: 4
    column: 8
  end:
    line: 4
    column: 9
- token: DoubleQuoted
  start:
    line: 4
    column: 9
  end:
    line: 4
    column: 21
- token: ScalarSpace
  start:
    line: 4
    column: 21
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 1
- token: Separator
  start:
    line: 5
    column: 1
  end:
    line: 5
    column: 2
- token: DoubleQuoted
  start:
    line: 5
    column: 2
  end:
    line: 5
    column: 16
- token: Escape
  start:
    line: 5
    column: 16
  end:
    line: 5
    column: 17
- token: EscapeCode
  start:
    line: 5
    column: 17
  end:
    line: 5
    column: 18
- token: DoubleQuoted
  start:
    line: 5
    column: 18
  end:
    line: 5
    column: 18
- token: DoubleQuote
  start:
    line: 5
    column: 18
  end:
    line: 5
    column: 19
- token: Break
  start:
    line: 5
    column: 19
  end:
    line: 6
    column: 0

