tests/suite/snapshots/suite__case_4gc6.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: SingleQuote
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: SingleQuoted
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 5
    line: 0
    column: 5
- token: QuotedQuote
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 7
    line: 0
    column: 7
- token: SingleQuoted
  start:
    index: 7
    line: 0
    column: 7
  end:
    index: 20
    line: 0
    column: 20
- token: SingleQuote
  start:
    index: 20
    line: 0
    column: 20
  end:
    index: 21
    line: 0
    column: 21
- token: Break
  start:
    index: 21
    line: 0
    column: 21
  end:
    index: 23
    line: 1
    column: 0

